# surrealdb-extras

./: Cargo.toml  readme.md
.github/: FUNDING.yml
db_proc_macro/: Cargo.toml
db_proc_macro/src/: lib.rs  table.rs
src/: define.rs  does_imp.rs  lib.rs  r2k.rs  records.rs  surreal_table.rs  thing.rs  thing_distplay.rs
src/thing/: mod.rs
src/thing/thing_array/: from.rs  mod.rs
src/thing/thing_func/: from.rs  impl.rs  mod.rs
src/thing/thing_type/: from.rs  impl.rs  mod.rs
surrealdb-extras-proc-macro/: Cargo.toml
surrealdb-extras-proc-macro/src/: lib.rs  part.rs  table.rs
