[package]
name = "surrealdb-extras"
version = "0.1.6"
edition = "2021"
readme = "readme.md"
repository = "https://github.com/frederik-uni/surrealdb-extras"
license = "MIT"
authors = ["frederik"]
description = "Provides additional functionality for working with SurrealDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.2"
#surrealdb-extras-proc-macro = {path = "surrealdb-extras-proc-macro"}
surrealdb-extras-proc-macro = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", optional = true }
geo = { version = "0.27", optional = true }
rust_decimal = { version = "1.33", optional = true }
uuid = { version = "1.7", optional = true }

[features]
default = []
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
geo = ["dep:geo"]
rust_decimal = ["dep:rust_decimal"]
