[package]
name = "surrealdb-extras-proc-macro"
version = "2.0.6"
authors = ["frederik"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"
readme = "../readme.md"
repository = "https://github.com/frederik-uni/surrealdb-extras"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = { version = "1.0" }
syn = "2.0.48"
deluxe = "0.5.0"
